--- a/index-dev.html
+++ b/index-dev.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>polslides (dev)</title>
+    <title>Motion Cards (dev)</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta charset="utf-8">
   </head>
